# llm-svg-generator-api

./: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: routes.py
app/core/: anthropic_client.py  config.py  gemini_client.py  llm_client.py  openai_client.py
app/models/: icon.py
app/services/: svg_generator.py  svg_prompt_builder.py
